<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rules_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/steel_blue"
    android:elevation="20dp"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/six_rules_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:backgroundTint="@color/deep_blue_grey"
        app:cardCornerRadius="35dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one_card_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/six_rules_text"
                style="@style/rule_style"
                android:layout_width="match_parent"
                android:gravity="center"
                android:singleLine="false"
                android:text="@string/six_rules_string"
                android:textSize="20sp"
                android:textStyle="bold"
                app:autoSizeTextType="uniform" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/one_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:backgroundTint="@color/deep_blue_grey"
        app:cardCornerRadius="35dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/high_card_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/one_rules_text"
                style="@style/rule_style"
                android:layout_width="match_parent"
                android:gravity="center"
                android:singleLine="false"
                android:text="@string/one_rules_string"
                android:textSize="20sp"
                android:textStyle="bold"
                app:autoSizeTextType="uniform" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/high_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:backgroundTint="@color/deep_blue_grey"
        app:cardCornerRadius="35dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/low_rules_cardview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/high_header_text"
                style="@style/rule_style"
                android:layout_width="match_parent"
                android:gravity="center"
                android:singleLine="false"
                android:text="@string/high_rules_string"
                android:textSize="20sp"
                android:textStyle="bold"
                app:autoSizeTextType="uniform" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/low_rules_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:backgroundTint="@color/deep_blue_grey"
        app:cardCornerRadius="35dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/odd_rules_cardview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/low_header_text"
                style="@style/rule_style"
                android:layout_width="match_parent"
                android:gravity="center"
                android:singleLine="false"
                android:text="@string/low_rules_string"
                android:textSize="20sp"
                android:textStyle="bold"
                app:autoSizeTextType="uniform" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/rules_header_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/deep_blue_grey"
        app:cardCornerRadius="35dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear_rules_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header_text_rules"
                style="@style/dialog_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:gravity="center"
                android:padding="4dp"
                android:shadowColor="@color/steel_blue"
                android:shadowRadius="50"
                android:text="@string/instructions_header"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rules_subheader"
                style="@style/dialog_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:gravity="center"
                android:padding="4dp"
                android:shadowColor="@color/steel_blue"
                android:shadowRadius="50"
                android:text="@string/instructions_text"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/even_rules_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:backgroundTint="@color/deep_blue_grey"
        app:cardCornerRadius="35dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rules_header_cardview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/even_header_text"
                style="@style/rule_style"
                android:layout_width="match_parent"
                android:gravity="center"
                android:singleLine="false"
                android:text="@string/even_rules"
                android:textSize="20sp"
                android:textStyle="bold"
                app:autoSizeTextType="uniform" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/odd_rules_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:backgroundTint="@color/deep_blue_grey"
        app:cardCornerRadius="35dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/even_rules_cardview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/odd_header_text"
                style="@style/rule_style"
                android:layout_width="match_parent"
                android:gravity="center"
                android:singleLine="false"
                android:text="@string/odd_rules_string"
                android:textSize="20sp"
                android:textStyle="bold"
                app:autoSizeTextType="uniform" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>